--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -55,6 +56,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
+    "axios": "^0.20.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "eslint": "7.7.0",
