--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -592,7 +592,7 @@ jobs:
       - run: 
           name: Get Service Account Key from environment Variables
           command: |
-            bash scripts/getServiceAccount.sh
+            source scripts/getServiceAccount.sh
 
       - push-docker-image:
           app-name: testdockerprod123
