--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -593,6 +593,7 @@ jobs:
           name: Get Service Account Key from environment Variables
           command: |
             source scripts/getServiceAccount.sh
+            echo $FIREBASE_APPLICATION_CREDENTIALS
 
       - push-docker-image:
           app-name: testdockerprod123
