--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -470,6 +470,13 @@ jobs:
       - image: circleci/node:12.18.4
     working_directory: ~/repo
     steps:
+      - run:
+          name: Check if context set environment variable
+          command: |
+            if [ -z "${FIREBASE_APPLICATION_CREDENTIALS}" ];then
+                echo "FIREBASE_APPLICATION_CREDENTIALS is unset"
+            fi
+            exit 1
       - checkout
       - restore_cache:
           keys:
