--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -536,7 +536,24 @@ jobs:
             git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/warmnuances/Brainfolio-prod.git testBranch
 
       - slack/notify:
-          channel: github-build
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*Running build Test*",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
+
+      - slack/notify:
           event: fail
           custom: |
             {
@@ -553,25 +570,10 @@ jobs:
                 }
               ]
             }
-      
+
       - slack/notify:
-          channel: github-build
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*e2e Test Success!* ✅🤗🔥🔥🔥",
-                      "emoji": true
-                    }
-                  ]
-                }
-              ]
-            }
-          event: pass
+          event: fail
+          template: basic_fail_1
         
      
 
@@ -594,6 +596,24 @@ jobs:
         description: The name of your Heroku App. For backwards compatibility the literal value `$HEROKU_APP_NAME` is the default, so you can easily use this command by setting an environment variable called HEROKU_APP_NAME
         type: string
     steps:
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*e2e Test Success!* ✅🤗🔥🔥🔥",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: pass
+
       - setup_remote_docker:
           version: 19.03.13
       - install
@@ -641,7 +661,6 @@ jobs:
           event: pass
 
       - slack/notify:
-          channel: github-build
           event: fail
           custom: |
             {
