--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -732,11 +732,11 @@ jobs:
                       "type": "button",
                       "text": {
                         "type": "plain_text",
-                        "text": "Link Me 🤟",
+                        "text": "Website Link 🤟",
                         "emoji": true
                       },
                       "value": "da",
-                      "url": "https://google.com",
+                      "url": "https://testdockerprod123.herokuapp.com/swagger/",
                       "action_id": "button-action"
                     }
                   }
