--- a/.template.env
+++ b/.template.env
@@ -10,6 +10,7 @@
 ####### Uncomment below #######
 
 # MONGO_URL = {YOUR_MONGO_URL}
-# TEST_MONGO = {YOUR_MONGO_URL}
-# SECRET = {YOUR_MONGO_URL}
+# TEST_MONGO = {YOUR_MONGO_URL for testing}
+# SECRET = {SECRET for JWT based on HMAC}
+# FIREBASE_API_KEY= {for testing}
 
