--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --detectOpenHandles"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.5.1",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
@@ -37,6 +38,7 @@
     "firebase-admin": "^9.2.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
