--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -647,6 +647,11 @@ jobs:
             ls -a
             echo $FIREBASE_APPLICATION_CREDENTIALS
 
+      - run: 
+           name: Get Service Account Key from environment Variables
+           command: |
+            echo $SENDGRID_API_KEY
+            echo $FRONTEND_HOST 
 
       - push-docker-image:
           app-name: testdockerprod123
@@ -655,6 +660,8 @@ jobs:
           app-name: testdockerprod123
           process-types: web
 
+
+   
 
       - slack/notify:
           event: fail
